Closed Bug 332941 Opened 19 years ago Closed 19 years ago

mAutoCompleteOnlyTyped not inited

Categories

(Firefox :: Bookmarks & History, defect, P2)

x86
All
defect

Tracking

()

RESOLVED FIXED
Firefox 2 alpha2

People

(Reporter: bzbarsky, Assigned: brettw)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

Valgrind says: ==12185== Conditional jump or move depends on uninitialised value(s) ==12185== at 0x1D65FB03: nsNavHistory::LoadPrefs() (nsNavHistory.cpp:1118) ==12185== by 0x1D65D30C: nsNavHistory::Init() (nsNavHistory.cpp:333) ==12185== by 0x1D63366A: nsNavHistoryConstructor(nsISupports*, nsID const&, void**) (nsModule.cpp:84) ==12185== by 0x1BB31AA4: nsGenericFactory::CreateInstance(nsISupports*, nsID const&, void**) (nsGenericFactory.cpp:80) And indeed, the nsNavHistory constructor doesn't initialize mAutoCompleteOnlyTyped and we compare to that random value in line 1118.
Assignee: nobody → brettw
OS: Linux → All
Priority: -- → P2
Target Milestone: --- → Firefox 2 alpha2
*** Bug 333270 has been marked as a duplicate of this bug. ***
note that I do have a pref browser.urlbar.matchOnlyTyped which LoadPrefs is supposed to init...
Attached patch PatchSplinter Review
Attachment #217882 - Flags: review?(annie.sullivan)
Attachment #217882 - Flags: review?(annie.sullivan) → review+
Fixed on branch and trunk.
Keywords: fixed1.8.1
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: