Bug 332941 r=annie.sullivan mAutoCompleteOnlyTyped not initialized.

Original committer: brettw%gmail.com
Original revision: 1.94
Original date: 2006/04/10 18:26:25